2008-03-28  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin

        Using convertUTF16ToUTF8() from WTF, add a helper function that gives you a UTF8 SharedBuffer
        created from a String.

        * ForwardingHeaders/wtf/unicode/UTF8.h: Added.
        * platform/text/PlatformString.h:
        * platform/text/String.cpp:
        (WebCore::utf8Buffer):

2008-03-28  Darin Adler  <darin@apple.com>

        Reviewed by Adam.

        - eliminate a tiny bit of unnecessary refcount churn

        * bindings/js/JSEventTargetBase.cpp:
        (WebCore::eventNameForPropertyToken): Return const AtomicString&.
        * bindings/js/JSEventTargetBase.h:
        (WebCore::JSEventTargetBase::getValueProperty): Update for above change.
        (WebCore::JSEventTargetBase::putValueProperty): Ditto.

2008-03-28  Simon Hausmann  <hausmann@webkit.org>

        Fix the Qt build.

        * rendering/Length.h: Include wtf/MathExtras.h for round().

2008-03-28  David Hyatt  <hyatt@apple.com>

        Fix a bug where background-position truncates instead of rounding when it evaluates to fractional
        pixel values.  This matches other browsers.

        Reviewed by maciej

        Added fast/backgrounds/background-position-rounding.html

        * rendering/Length.h:
        (WebCore::Length::calcValue):
        (WebCore::Length::calcMinValue):
        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::calculateBackgroundImageGeometry):

2008-03-27  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix. Return a default value for operator == 
        when !USE(WXGC) (not implemented in that case).

        * platform/graphics/wx/AffineTransformWx.cpp:
        (WebCore::AffineTransform::operator== ):

2008-03-27  Maciej Stachowiak  <mjs@apple.com>

        - fix build

        * svg/SVGGlyphMap.h:
        (WebCore::GlyphMapNode::create):

2008-03-27  Brady Eidson  <beidson@apple.com>

        Forgot a small requested change before committing
