@@ -122,7 +122,11 @@ void PlatformScrollbar::geometryChanged()
 
     FrameView* frameView = static_cast<FrameView*>(parent());
     IntRect windowRect = IntRect(frameView->contentsToWindow(frameGeometry().location()), frameGeometry().size());
-    GtkAllocation allocation = { windowRect.x(), windowRect.y(), windowRect.width(), windowRect.height() };
+
+    IntSize sz = frameGeometry().size();
+    sz.clampNegativeToZero();
+
+    GtkAllocation allocation = { windowRect.x(), windowRect.y(), sz.width(), sz.height() };
     gtk_widget_size_allocate(gtkWidget(), &allocation);
 }
 
